--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,15 @@
-/* You can add global styles to this file, and also import other style files */
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    ::-moz-selection { /* Code for Firefox */
+        color: white;
+        background: magenta;
+      }
+      
+      ::selection {
+        color: white;
+        background: magenta;
+      }
+}
+
