--- a/src/app/components/iputscomp/iputscomp.component.scss
+++ b/src/app/components/iputscomp/iputscomp.component.scss
@@ -24,7 +24,8 @@
 }
 .settings{
            
-    p{
+    p{  
+        margin: 0.3em;
         text-align: center ; 
         font-weight: bold;
     }
