--- a/src/app/components/pswrdcomp/pswrdcomp.component.html
+++ b/src/app/components/pswrdcomp/pswrdcomp.component.html
@@ -1,3 +1,3 @@
 <div class="inpttxt">
-    <input type="text" name="textinpt" id="txtinp" />
+    <input type="text" name="textinpt" id="txtinp" [value]="val"/>
   </div>
