--- a/src/app/components/iputscomp/iputscomp.component.html
+++ b/src/app/components/iputscomp/iputscomp.component.html
@@ -13,26 +13,47 @@
       max="20"
       (click)="getValue($event)"
     />
-    <p id="txt">{{x}}</p>
+    <p id="txt">{{ x }}</p>
   </div>
 </div>
 <div class="settings">
   <p>Settings</p>
   <ul>
     <li>
-      <input type="checkbox"  name="upperinp" id="uprinp" (change)="checkCheckBoxvalueupper($event)" />
+      <input
+        type="checkbox"
+        name="upperinp"
+        id="uprinp"
+        (change)="checkCheckBoxvalueupper($event)"
+      />
       <label for="upperinp">Upper Cases</label>
     </li>
     <li>
-      <input type="checkbox"  name="lowerinp" id="lwrinp" checked (change)="checkCheckBoxvaluelower($event)" />
+      <input
+        type="checkbox"
+        name="lowerinp"
+        id="lwrinp"
+        checked
+        (change)="checkCheckBoxvaluelower($event)"
+      />
       <label for="lowerinp">Lower Cases</label>
     </li>
     <li>
-      <input type="checkbox" name="numberinp" id="nbrinp" (change)="checkCheckBoxvaluenbr($event)" />
+      <input
+        type="checkbox"
+        name="numberinp"
+        id="nbrinp"
+        (change)="checkCheckBoxvaluenbr($event)"
+      />
       <label for="numberinp">Use Numbers</label>
     </li>
     <li>
-      <input type="checkbox" name="symbolinp" id="sblinp" (change)="checkCheckBoxvaluesbl($event)" />
+      <input
+        type="checkbox"
+        name="symbolinp"
+        id="sblinp"
+        (change)="checkCheckBoxvaluesbl($event)"
+      />
       <label for="syminp">Use Symbols</label>
     </li>
   </ul>
