--- a/src/app/components/iputscomp/iputscomp.component.html
+++ b/src/app/components/iputscomp/iputscomp.component.html
@@ -60,5 +60,5 @@
 </div>
 <div class="btndiv">
   <button id="btngen" (click)="generateBtn()">Generate</button>
-  <button id="btncopy">Copy</button>
+  <button id="btncopy" (click)="copyBtn()">Copy</button>
 </div>
